codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__app_server_forked_thread_history_line_without_app_server_name.snap
---
source: tui/src/chatwidget/tests/history_replay.rs
expression: combined
---
• 线程分叉自 019c2d47-4935-7423-a190-05691f566092
