codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__app_server_guardian_review_denied_renders_denied_request.snap
---
source: tui/src/chatwidget/tests/mcp_guardian.rs
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---

✗
• 处理中s(0s • esc 中断)
  .--------------------------------.
  | 礼貌地从底栏飘上来。                     |
  '--------------------------------.
    \
   .---.
  ( ^ ^ )
  / ~~~ \\
  Echo ★ 常见 幽灵 · 可见 · 坐立不安
  峰值 耐心 74 · 无 · 困倦眼 · 孵化中 · 抚摸 0


› Ask Codex to do anything

  gpt-5.3-codex default · 100% left · /tmp/project
