codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__app_server_guardian_review_timed_out_renders_timed_out_request.snap
---
source: tui/src/chatwidget/tests/guardian.rs
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---

✗
• 处理中t(0s • esc 中断)
  .------------.
  | 轻轻漂来。 |
  '------------.
    \
  }~   ~{
  ( ^..^ )
   \__/
  Ripple ★ 常见 美西螈 · 坐立不安


› 让 Codex 帮你做任何事

  gpt-5.3-codex 默认 · 已用 0% · /tmp/project
