codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__app_server_mcp_startup_failure_renders_warning_history.snap
---
source: tui/src/chatwidget/tests/mcp_startup.rs
assertion_line: 142
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---
⚠ `alpha` 的 MCP 客户端启动失败: handshake failed
⚠ MCP 启动未完成（失败：alpha）

  .------------.
  | 轻轻漂来。 |
  '------------.
    \
  }~   ~{
  ( ^..^ )
   \__/
  Ripple ★ 常见 美西螈 · 坐立不安

› Ask Codex to do anything

  gpt-5.3-codex 默认 · 已用 0% · /tmp/project
