codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__apply_patch_manual_flow_history_approved.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: lines_to_single_string(&approved_lines)
---
• 新增 foo.txt (+1 -0)
    1 +hello
