codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__approval_modal_exec.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: terminal.backend().vt100().screen().contents()
---


  是否运行以下命令？

  原因：this is a test reason such as one that would be produced by the model

  $ echo hello world

› 1. 是，继续 (y)
  2. 是，且不再询问以 `echo hello world` 开头的命令 (p)
  3. 否，告诉 Codex 换个做法 (esc)

  按 enter 确认或 esc 取消
