codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__approval_modal_patch.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: terminal.backend().vt100().screen().contents()
---


  是否进行以下编辑？

  原因：The model wants to apply changes

  README.md (+2 -0)

    1 +hello
    2 +world

› 1. 是，继续 (y)
  2. 是，且不再询问这些文件 (a)
  3. 否，告诉 Codex 换个做法 (esc)

  按 enter 确认或 esc 取消
